-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8
-
Component/s: hotspot
-
b40
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083437 | emb-9 | Karen Kinnear | P2 | Resolved | Fixed | master |
| JDK-8063365 | 8u45 | Karen Kinnear | P2 | Resolved | Fixed | b01 |
| JDK-8062114 | 8u40 | Karen Kinnear | P2 | Closed | Fixed | b13 |
| JDK-8071099 | emb-8u47 | Karen Kinnear | P2 | Resolved | Fixed | team |
First, recursively initialize any super class, unchanged.
Then recursively initialize super interfaces that declare a non-abstract instance method in class file interface array order.
Example:
interface I
interface J extends I
class A implements J
interface K extends I
class B extends A implements K
class C implements L
order of initialization: I, J, A, K, B, L, C
In JDK8 this was accomplished by initializing any super interfaces that declare or inherit default methods when initializing all superclasses of a class being initialized.This surprises people by changing the order of superinterface initialization.
.
- backported by
-
JDK-8063365 interface initialization for default methods
-
- Resolved
-
-
JDK-8071099 interface initialization for default methods
-
- Resolved
-
-
JDK-8083437 interface initialization for default methods
-
- Resolved
-
-
JDK-8062114 interface initialization for default methods
-
- Closed
-
- duplicates
-
JDK-8078241 Regression: Interface field becomes null if implementation field has same name
-
- Closed
-
- relates to
-
JDK-8058318 compiler changes for eager interface initialization
-
- Closed
-
-
JDK-8163969 Cyclic interface initialization causes JVM crash
-
- Resolved
-
-
JDK-8043190 5.5: Trigger interface initialization on default method invocation
-
- Closed
-
-
JDK-8061962 classFileParser.cpp.orig got erroneously added to the hotspot source repository
-
- Closed
-