8043275: Fix interface initialization for default methods

Initialize interfaces that declare concrete instance methods.

Reviewed-by: kamg, coleenp, psandoz